--- a/webapp/templates/index.html
+++ b/webapp/templates/index.html
@@ -1,4 +1,10 @@
 <html>
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
+
+</head>
    <body>
       <form action = "/palette" method = "POST"
          enctype = "multipart/form-data">
