--- a/webapp/templates/palette.html
+++ b/webapp/templates/palette.html
@@ -1,138 +1,6 @@
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
+{% extends "base.html" %}
 
-</head>
-
-<h1>dominant colours</h1>
-
-  <style>
-/*    .colour {
-      width: calc(250px - 1em - .5em);
-/*      text-align: center;*/
-      padding: 5px;
-
-/*      margin: .25em;*/
-/*      border-radius: 5px;*/
-
-
-/*      margin-left: auto;*/
-/*      margin-right: auto;*/
-    }*/
-
-    main {
-/*      max-width: 700px;*/
-/*      margin-left: auto;*/
-/*      margin-right: auto;*/
-/*      text-align: center;*/
-    }
-
-    #results {
-/*      margin-top: 1em;*/
-      display: grid;
-      grid-template-columns: 325px 48px auto;
-      grid-template-rows: repeat(5, 48px);
-      grid-gap: 15px;
-      height: 300px;
-      width: 600px;
-      margin-left: auto;
-      margin-right: auto;
-    }
-
-    .thumbnail {
-/*      border: 4px solid #999;*/
-      grid-row: 1 / span 5;
-      grid-column: 1 / 3;
-      width:  300px;
-      height: 300px;
-      background: #ddd;
-/*      margin: -4px;*/
-    }
-
-    img {
-      width:  100%;
-      height: 100%;
-      object-fit: contain;
-    }
-
-    .sample {
-      grid-column: 1 / 2;
-    }
-
-    .label {
-      font-family: monospace;
-      font-size: 170%;
-      height:      48px;
-      line-height: 48px;
-    }
-
-    .sample {
-      width:  48px;
-      height: 48px;
-      border: 2px solid black;
-/*      margin: -2px;*/
-      grid-column: 2 / 3;
-    }
-
-    .label {
-      grid-column: 3 / 3;
-    }
-
-    #label_1, #sample_1 { grid-row: 1 / 5; }
-    #label_2, #sample_2 { grid-row: 2 / 5; }
-    #label_3, #sample_3 { grid-row: 3 / 5; }
-    #label_4, #sample_4 { grid-row: 4 / 5; }
-    #label_5, #sample_5 { grid-row: 5 / 5; }
-
-    @media screen and (max-width: 600px) {
-      .thumbnail {
-        width:  300px;
-        height: 230px;
-        margin-left: auto;
-        margin-right: auto;
-      }
-
-      #results {
-        grid-template-columns: 42px auto;
-        width: 300px;
-        grid-template-rows: 240px repeat(5, 42px);
-        grid-row-gap: 10px;
-        height: auto;
-      }
-
-      .thumbnail {
-        grid-column: 1 / span 2;
-        grid-row:1 / 6;
-      }
-
-      .sample {
-        grid-column: 1 / 2;
-      }
-
-      .label {
-        grid-column: 2 / 2;
-      }
-
-      #label_1, #sample_1 { grid-row: 2 / 6; }
-      #label_2, #sample_2 { grid-row: 3 / 6; }
-      #label_3, #sample_3 { grid-row: 4 / 6; }
-      #label_4, #sample_4 { grid-row: 5 / 6; }
-      #label_5, #sample_5 { grid-row: 6 / 6; }
-
-      .label {
-        height:      42px;
-        line-height: 42px;
-      }
-
-      .sample {
-        width:  42px;
-        height: 42px;
-      }
-    }
-  </style>
-
-<main>
+{% block content %}
   <div id="results">
     <div class="thumbnail">
       <img src="{{ thumbnail_data_uri }}">
@@ -144,5 +12,4 @@
   </div>
 
   <p><a href="/">try another image</a></p>
-</main>
-
+{% endblock %}
