--- a/webapp/templates/base.html
+++ b/webapp/templates/base.html
@@ -11,6 +11,18 @@
   <body>
     <main>
       <h2>find the dominant colours in an image</h2>
+
+
+      {% with messages = get_flashed_messages() %}
+        {% if messages %}
+          <div class="errors">
+            {% for message in messages %}
+              {{ message | safe }}
+            {% endfor %}
+          </div>
+        {% endif %}
+      {% endwith %}
+
       {% block content %}
       {% endblock %}
     </main>
