--- a/webapp/templates/base.html
+++ b/webapp/templates/base.html
@@ -26,12 +26,12 @@
       {% endblock %}
     </main>
     <footer>
-        made with <span class="heart">&#x2764;</span> by <a href="https://alexwlchan.net">alexwlchan</a>
-        ·
-        {{ version }}
-        ·
-        code on <a href="https://github.com/alexwlchan/dominant_colours/tree/main/webapp">github</a>
-      </div>
+      also available <a href="https://github.com/alexwlchan/dominant_colours">on the command-line</a>·
+      {{ version }}<br/>
+      made with <span class="heart">&#x2764;</span> by <a href="https://alexwlchan.net">alexwlchan</a>
+
+      ·
+      code on <a href="https://github.com/alexwlchan/dominant_colours/tree/main/webapp">github</a>
     </footer>
   </body>
 </html>
