--- a/webapp/templates/base.html
+++ b/webapp/templates/base.html
@@ -6,6 +6,18 @@
 
     <link rel="stylesheet" href="/static/style.css">
 
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="dominant_colours" />
+    <meta name="twitter:title" content="dominant_colours" />
+    <meta name="twitter:description" content="Find the dominant colours in an image">
+    <meta name="twitter:image" content="https://alexwlchan.net/files/2022/dominant_colours_screenshot.png" />
+
+    <meta property="og:type" content="article" />
+    <meta property="og:url" content="https://dominant-colours.glitch.me/">
+    <meta property="og:title" content="dominant_colours">
+    <meta property="og:description" content="Find the dominant colours in an image" />
+    <meta property="og:image" content="https://alexwlchan.net/files/2022/dominant_colours_screenshot.png" />
+
     <title>dominant colours</title>
   </head>
   <body>
